# aurchecker-rs

./: Cargo.toml  README.md
example/: config_example.json  pkgs_example.json
src/: logging.rs  main.rs  network.rs  parser.rs
util/: genPkgsConf.py
